Bulk commit Renamed classes, modified data gen, refactored, begin re-adding biome vote features